--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -32,6 +32,18 @@ color: beige;
 	left: 0;
 
 }
+.nav_left{
+	background: var(--primary);
+	color: var(--text);
+	gap: 20px;
+	padding: 2px 10px; 
+	border-radius: 5px;
+}
+.nav_left span{
+	gap: 4px;
+	align-items: firstbaseline;
+}
+
 .nav_right{
 	gap: 12px;
 	font-size: 1.2rem;
@@ -79,6 +91,6 @@ background: wheat;
 
 @media  (max-width:1200px){
 	.nav_left{
-		display: none;
+		display: none !important;
 	}
 }
