--- a/src/components/TaskBar/taskbar.module.css
+++ b/src/components/TaskBar/taskbar.module.css
@@ -1,12 +1,14 @@
-
-
 .taskbar{
 	justify-content: space-between;
 	padding: 10px 30px;
+	gap: 10px;
 	background: var(--primary);
 	border-bottom: 1px solid var(--light-border);
 
 }
+.task_left_min{
+  	     display: none;
+	}
 .task_left,.filter{
 	border: 1px solid var(--light-border);
 	border-radius: 5px;
@@ -16,14 +18,24 @@
 .task_left button,.filter button{
 	padding: 5px 20px;
 	border-radius: 5px;
+	font-size: clamp(10px ,1vw, 1rem);
+}
+.searchContainer{
+	background: var(--primary);
 }
 .search{
 	position: relative;
-	width: 40vw;
 	border: 1px solid var(--light-border);
 	border-radius: 5px;
 	gap: 7px;
 	padding: 0 5px;
+	width: 35vw;
+}
+.search >div{
+	width: 100%;
+}
+.closeSearch{
+	display: none;
 }
 .search_icon{
 	font-size: 1.3rem;
@@ -33,8 +45,13 @@
 	height: 35px;
 }
 
+
+.filter{
+	position: relative;
+	justify-content: center;
+}
 .searchdropDown,
-.filter .filterCont{
+ .sortCont{
 	position: absolute;
 	left: 0;
 	bottom: -3.4rem;
@@ -68,14 +85,114 @@
 }
 
 
-.filter{
-	position: relative;
-
+.filterContainer{
+	gap: 10px;
+}
+.filterContainer >i{
+	font-size: 1rem;
+	padding: 13px 5px;
+	border-radius: 5px;
+border: 1px solid var(--light-border);
+display: none;
 }
 
 .filter span{
  margin-right: 10px;
 }
-@media (max-width:1200px){
-	
+.opensort{
+		padding: 13px 5px ;
+	gap: 10px;
+}
+
+@media (max-width: 1200px){
+		.searchContainer.active{
+	position: fixed;
+		z-index: 10;
+	inset: 0;
+	width: 100%;
+	height: 100%;
+}
+	.search{
+		width: 100%;
+	}
+	.closeSearch{
+		display:block ;
+	cursor: pointer;
+}
+.closeSearch_hidden{
+	display: none;
+}
+.sm_drop_hidden{
+	display: none;
+}
+}
+@media (max-width:800px){
+	.searchContainer.active{
+	position: fixed;
+		z-index: 10;
+	inset: 0;
+	width: 100%;
+	height: 100%;
+}
+	.search{
+		width: 100%;
+	}
+	.closeSearch{
+		display:block ;
+	cursor: pointer;
+}
+.closeSearch_hidden{
+	display: none;
+}
+.sm_drop_hidden{
+	display: none;
+}
+	.search_box{
+		width: 0;
+	}
+	.search_box_active{
+		width: 100%;
+	}
+	.filterContainer >i{
+		display: block;
+	}
+	.sortCont{
+		left: -5.8rem;
+		width: 10rem;
+	}
+	.opensort>span{
+		display: none;
+	}
+	.opensort>i{
+		font-size: 1.3rem;
+	}
+	.currentSort{
+		display: none;
+	}
+	.task_left{
+
+		position: relative;
+		flex-direction: column;
+
+	}
+	.task_left_min{
+		display: flex;
+		gap: 10px;
+		cursor: pointer;
+	}
+	.task_left_links{
+/*		position: absolute;*/
+		display: flex;
+
+	}
+	.task_left_links button{
+       color: rgba(0, 0, 0, .4) !important;
+	}
+	.task_left_links button:hover{
+		background: rgba(255, 255, 255, .8);
+	}
+     .task_left_links_hidden{
+         display: none;
+     }
+    
 }
